WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
185515
REGRESSION(
r230323
): UIProcess needs to notify WebContent process of Accessibility setting changes
https://bugs.webkit.org/show_bug.cgi?id=185515
Summary
REGRESSION(r230323): UIProcess needs to notify WebContent process of Accessib...
Brent Fulgham
Reported
2018-05-10 10:09:10 PDT
In
Bug 184337
I started caching the state of CGDisplayUsesInvertedPolarity (and other accessibility settings) so that we could message them from the UIProcess, and avoid interacting with the Window Server in the WebContent process. Unfortunately, this caused certain accessibility features (such as inverted colors) to only be read when the UIProcess launched, because WebKit was not registered to be notified when screen-affecting accessibility changes were made. Instead, WebKit needs to register to be notified if accessibility preferences change so that it can notify the related WebContent processes that their screen characteristics may have changed.
Attachments
Patch
(5.39 KB, patch)
2018-05-10 10:24 PDT
,
Brent Fulgham
no flags
Details
Formatted Diff
Diff
Patch for landing
(5.39 KB, patch)
2018-05-10 10:54 PDT
,
Brent Fulgham
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2018-05-10 10:09:49 PDT
<
rdar://problem/39627764
>
Brent Fulgham
Comment 2
2018-05-10 10:24:19 PDT
Created
attachment 340099
[details]
Patch
Brent Fulgham
Comment 3
2018-05-10 10:54:27 PDT
Created
attachment 340104
[details]
Patch for landing
WebKit Commit Bot
Comment 4
2018-05-10 11:32:05 PDT
Comment on
attachment 340104
[details]
Patch for landing Clearing flags on attachment: 340104 Committed
r231648
: <
https://trac.webkit.org/changeset/231648
>
WebKit Commit Bot
Comment 5
2018-05-10 11:32:06 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug